--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Irianni Munoz</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,28 +51,22 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Hi, I'm Software Developer, specializing in JavaScript.
+          Turning your problems into solutions is my passion.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          <a href="https://github.com/munozirianni1988/PersonalPageCYF"> Personal Page</a> <br>
+          <a href="https://github.com/munozirianni1988/HTML-CSS-Module-Project">Landing Page for Karma</a>
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          <a href="mailto:munozirianni@gmail.com">Email Me</a> <br>
+          <a href="www.linkedin.com/in/irianni-munoz-693a36164">My LinkedIn</a>
         </p>
       </section>
     </main>
