--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           malkitbenning@gmail.com
         </p>
         <p>
-          <a href="https://linkedin.com/in/malkit-benning-3700bb15b"><i class="fa-brands fa-linkedin-in"></i></a>
+          <a href="https://linkedin.com/in/malkit-benning-3700bb15b"><i class="fa-brands fa-linkedin-in"></i> LinkedIn</a>
           
         </p>
 
