--- a/example-name-portfolio/index.html
+++ b/example-name-portfolio/index.html
@@ -25,7 +25,7 @@
     </style>
     <link
       rel="stylesheet"
-      href="style.css"
+      href="assets/styles.css"
       media="print"
       onload="this.media='all'"
     />
@@ -49,7 +49,9 @@
     </header>
     <main tabindex="0">
       <section id="about">
-        <header><h2>About Me</h2></header>
+        <header>
+          <h2>About Me</h2>
+        </header>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
           excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
@@ -59,12 +61,67 @@
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <ul class="showcase">
+          <li class="showcase__item project">
+            <details class="project__details">
+              <summary class="project__summary">
+                <h3 class="project__heading">
+                  <a
+                    href="https://github.com/CodeYourFuture/HTML-CSS-Challenges-Solution"
+                    >T-Shirt Order Form</a
+                  >
+                </h3>
+              </summary>
+              <div class="project__blurb">
+                <p>
+                  This was exactly as it says: a t-shirt order form, in HTML and
+                  CSS. This text is copy-pasted.
+                </p>
+                <p>
+                  In this project I learned a whole bunch of foundational
+                  principles for front end: I learned how to structure data
+                  formally with modern native form inputs, and how to
+                  <a
+                    href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation"
+                    >validate that data client-side</a
+                  >
+                  with HTML5 attributes. The brief was fairly open - the design
+                  is all mine, but the Acceptance Criteria was strict: I had to
+                  deliver a perfect score in
+                  <a
+                    href="https://developer.chrome.com/docs/lighthouse/overview/"
+                    >Lighthouse</a
+                  >, and meet some other validation constraints.
+                </p>
+                <p>
+                  I spent a lot of time testing my code with
+                  <a href="https://developer.chrome.com/docs/devtools/"
+                    >Devtools</a
+                  >
+                  and thinking carefully about the semantics of the copy pasted
+                  DOM. I also explored the
+                  <a
+                    href="https://developer.chrome.com/docs/devtools/coverage/"
+                  >
+                    Coverage</a
+                  >
+                  evaluator and used it to improve my CSS: only delivering
+                  precisely what my design needed and no excess code.
+                </p>
+              </div>
+            </details>
+            <picture class="project__picture">
+              <source
+                srcset="https://picsum.photos/seed/picsum/600/600"
+                type="image/webp"
+              />
+              <img
+                src="https://picsum.photos/seed/picsum/600/600"
+                alt="Screenshot of my page showing a form for ordering t-shirts"
+              />
+            </picture>
+          </li>
+        </ul>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
