--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Anna</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,10 +51,7 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          I am still impressed by how the 2-digits world can appear in so many colors, functions and views. And the engine that makes that world to create is human logic and patience while translating every tiny bit of a task to the computer language. The first language I was introduced to was Pascal at school when no one heard about C# or Phython yet &#x1F9D0 however the main principles of if statements are still the same. Unfortunately i was not able to continue my coding path that time, but in 20 years time this world is still magnificent to me and an every solved coding task for me is still as a huge victory which i enjoy every time &#x1F60A.
         </p>
       </section>
       <section id="projects">
