Finish About me

--- a/index.html
+++ b/index.html
@@ -51,10 +51,29 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          What I do and how
+          In my professional life I am a coder in HTML, CSS, Javascript, React, Node.js. I have run a company for 14 years 
+          and help people and companies commercialize their products by matching them to customers,
+          potential partners and investors. I organize tech conferences in my company Somerco and has also organised within London Tech Week.
+
+          What separates me
+          When I commit to do work or educate myself I take the opportunity to learn as much as I can. As example, when I got accepted
+          into Code Your Future Code Boot Camp my group had to wait 3 months before we started. Instead of not coding then I studied 
+          HTML and CSS on freecodecamp.org and got a certification from them. I was then prepared for the CYF course once it started.
+          I use my previous experience I gained as an analyst at a research institute and as an accredited lobbyist at the EU
+          parliament to think out of the box. I have developed new analytical models provided input on job growth, trade,
+          innovations, entrepreneurship, International business, energy, societies infrastructure and governmental agreements. My
+          broad understanding of different topics and ability to quickly break down problems helps me in my work.
+
+          Why it matters
+          My aim in the coursework at CYF was to have a buffer to deadline so I get time to also go back and practice fundamentals.
+          It matters, and give time to double check code and if not all goes as planned I have extra time and can ask for help too.
+          By thinking out of the box in my company I make business increase sale quicker, brand products on new markets, innovators
+          to take the step from having a product to earn more money, scientist to see the commercial and societal benefits with
+          their science. An important part for b2c and b2b is to be active on events and social media to generate business leads in a clever way.
+          
+          In my private life I am interested in formula 1, football, ice hockey, shorinji kempo and I try to learn more about art
+          and history.
         </p>
       </section>
       <section id="projects">
