--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       name="description"
       content="The technical portfolio of trainee name"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- suppress FOUC-->
+    <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+    
     <style>
       html {
         animation: fade-in 1s;
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Jan Softa</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,12 +51,12 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          What I do and how
+          What I do and how <br>
           In my professional life I am a coder in HTML, CSS, Javascript, React, Node.js. I have run a company for 14 years 
           and help people and companies commercialize their products by matching them to customers,
           potential partners and investors. I organize tech conferences in my company Somerco and has also organised within London Tech Week.
-
-          What separates me
+<br>
+          What separates me<br>
           When I commit to do work or educate myself I take the opportunity to learn as much as I can. As example, when I got accepted
           into Code Your Future Code Boot Camp my group had to wait 3 months before we started. Instead of not coding then I studied 
           HTML and CSS on freecodecamp.org and got a certification from them. I was then prepared for the CYF course once it started.
@@ -64,14 +64,14 @@
           parliament to think out of the box. I have developed new analytical models provided input on job growth, trade,
           innovations, entrepreneurship, International business, energy, societies infrastructure and governmental agreements. My
           broad understanding of different topics and ability to quickly break down problems helps me in my work.
-
-          Why it matters
+<br>
+          Why it matters<br>
           My aim in the coursework at CYF was to have a buffer to deadline so I get time to also go back and practice fundamentals.
           It matters, and give time to double check code and if not all goes as planned I have extra time and can ask for help too.
           By thinking out of the box in my company I make business increase sale quicker, brand products on new markets, innovators
           to take the step from having a product to earn more money, scientist to see the commercial and societal benefits with
           their science. An important part for b2c and b2b is to be active on events and social media to generate business leads in a clever way.
-          
+          <br>
           In my private life I am interested in formula 1, football, ice hockey, shorinji kempo and I try to learn more about art
           and history.
         </p>
@@ -79,19 +79,99 @@
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          In my project showcase, I highlight websites, functions I have coded on Code Your Future, but also from freecodecamp and General Assembly.
         </p>
+
+        <h2>These are some of my projects</h2>
+        <div class="projects-grid">
+          <a href="https://github.com/CodeYourFuture/JavaScript-Core-2-Coursework-Week3/pull/215">
+            <img src="https://cdn.pixabay.com/photo/2015/04/23/17/41/javascript-736401_960_720.png" alt="JS-Core-2-Week3" class="project-img" />
+            <p class="project-tile">JS-Core2-Week3</p></img>
+          </a>
+          <a href="https://github.com/CodeYourFuture/JavaScript-Core-2-Coursework-Week2/pull/221">
+            <img src="https://cdn.pixabay.com/photo/2015/04/23/17/41/javascript-736400_960_720.png" alt="JS-Core-2-Week2"
+              class="project-img" />
+            <p class="project-tile">JS-Core2-Week2</p></img>
+          </a>
+          <a href="https://lucky-nougat-4dbc83.netlify.app/#">
+            <img src="https://i.postimg.cc/6QTZyVK3/Karmabackgroundimg.jpg" alt="Karma Page"
+              class="project-img" />
+            <p class="project-tile">Karma Website</p></img>
+          </a>
+          <a href="https://magenta-lokum-71c477.netlify.app/">
+            <img src="https://cdn.pixabay.com/photo/2015/05/27/11/50/ferriswheel-786336_960_720.jpg" alt="Ferriswheel"
+              class="project-img" />
+            <p class="project-tile">Ferriswheel</p></img>
+          </a>
+            <a href="https://unrivaled-figolla-834b12.netlify.app/">
+              <img src="https://cdn.pixabay.com/photo/2018/07/06/23/31/bicycles-3521373_960_720.jpg" alt="Bike for Refugees" class="project-img" />
+              <p class="project-tile">Bike for Refugees</p></img>
+            </a>
+            <a href="https://clever-dodol-095613.netlify.app/">
+            <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg" alt="Tribute Page"
+              class="project-img" />
+            <p class="project-tile">Tribute Page</p></img>
+          </a>
+          <a href="https://cerulean-daifuku-451a49.netlify.app/">
+          <img src="https://cdn.pixabay.com/photo/2013/07/13/13/47/judo-161543_960_720.png" alt="CSS Transition Penguin"
+          class="project-img" />
+          <p class="project-tile">CSS Transition Penguin</p></img>
+          </a>
+          <a href="https://snazzy-sopapillas-f5bb4d.netlify.app/">
+            <img src="https://cdn.pixabay.com/photo/2017/02/15/09/16/ramen-2068052_960_720.jpg" alt="Eshas Eatery"
+              class="project-img" />
+            <p class="project-tile">Eshas Eatery</p></img>
+          </a>
+            <a href="https://app.netlify.com/sites/bespoke-crisp-97e9c3/overview">
+              <img src="https://cdn.pixabay.com/photo/2020/07/12/10/06/picasso-5396719_960_720.png" alt="CSS to Picasso"
+                class="project-img" />
+              <p class="project-tile">CSS to Picasso</p></img>
+            </a>
+
+          <a href="https://voluble-cupcake-aa1721.netlify.app/">
+          <img src="https://cdn.pixabay.com/photo/2020/05/01/09/13/cupcakes-5116009_960_720.jpg" alt="Cake Co"
+          class="project-img" />
+          <p class="project-tile">Cake Co</p></img>
+          </a>
+        <a href="https://app.netlify.com/sites/lambent-wisp-294934/overview">
+         <img src="https://cdn.pixabay.com/photo/2017/10/16/23/02/brooklyn-2858985_960_720.png" alt="CSS Cityskyline"
+        class="project-img" />
+        <p class="project-tile">CSS Cityskyline</p></img>
+        </a>
+
+          <a href="https://gentle-lamington-63becc.netlify.app/">
+            <img src="https://cdn.freecodecamp.org/curriculum/css-photo-gallery/1.jpg" alt="CSS Flexbox Gallery"
+              class="project-img" />
+            <p class="project-tile">CSS Flexbox Gallery</p></img>
+          </a>
+          <a href="https://merry-choux-1c735c.netlify.app/">
+            <img src="https://i.postimg.cc/ZnKJQvvG/Screenshot-from-2023-04-16-10-36-59.png" alt="Tribute Page"
+              class="project-img" />
+            <p class="project-tile">Visit London App</p></img>
+          </a>
+          <a href="https://bespoke-moxie-c52365.netlify.app/">
+            <img
+              src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn2.cdnme.se%2F4780850%2F8-3%2Frogle-bk-rbk-swedish-hockey-club-4k-emblem_5b51b6379606ee12f0e6a267.jpg&f=1&nofb=1&ipt=e8444f3e65d8cb036c5422a3ecda9adbb9aa156bd7e13a7b497c828728b07b81&ipo=images"
+              alt="Tribute Page" class="project-img" />
+            <p class="project-tile">Tribute Sport List</p></img>
+          </a>
+        <a href="https://visionary-treacle-8590dd.netlify.app/">
+          <img src="https://profile-images.xing.com/images/90d22e3b1045164cf0b673acd60b1b25-1/jan-softa.256x256.jpg"
+            alt="Jans Blog" class="project-img" />
+          <p class="project-tile">Jans Blog</p></img>
+        </a>
+        </div>
+        </section>
+
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+         LinkedIN https://www.linkedin.com/in/jan-softa-680a79b2/
+<br>
+         Github: https://github.com/softacoder
+<br>
+         Email: jan.softa67@gmail.com
         </p>
       </section>
     </main>
