--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 
         <h2>These are some of my projects</h2>
         <div class="projects-grid">
+          <a href="https://github.com/softacoder/JavaScript-Core-2-Coursework-Week4">
+            <img src="https://cdn.pixabay.com/photo/2015/04/23/17/41/javascript-736400_960_720.png" alt="JS-Core-2-Week2"
+              class="project-img" />
+            <p class="project-tile">JS-Core2-Week2</p></img>
           <a href="https://github.com/CodeYourFuture/JavaScript-Core-2-Coursework-Week3/pull/215">
             <img src="https://cdn.pixabay.com/photo/2015/04/23/17/41/javascript-736401_960_720.png" alt="JS-Core-2-Week3" class="project-img" />
             <p class="project-tile">JS-Core2-Week3</p></img>
