--- a/index.html
+++ b/index.html
@@ -51,21 +51,23 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Hi, I'm Software Developer, specializing in JavaScript.
-          Turning your problems into solutions is my passion.
+          Hi, I'm Software Developer, specializing in JavaScript. Turning your
+          problems into solutions is my passion.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          <a href="https://github.com/munozirianni1988/PersonalPageCYF"> Personal Page</a> <br>
-          <a href="https://github.com/munozirianni1988/HTML-CSS-Module-Project">Landing Page for Karma</a>
+          <a href="https://iriannimunoz.netlify.app/"> Personal Page</a> <br />
+          <a href="https://github.com/munozirianni1988/HTML-CSS-Module-Project"
+            >Landing Page for Karma</a
+          >
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          <a href="mailto:munozirianni@gmail.com">Email Me</a> <br>
+          <a href="mailto:munozirianni@gmail.com">Email Me</a> <br />
           <a href="www.linkedin.com/in/irianni-munoz-693a36164">My LinkedIn</a>
         </p>
       </section>
