--- a/index.html
+++ b/index.html
@@ -57,12 +57,14 @@
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
-        <p>
-          <a href="https://iriannimunoz.netlify.app/"> Personal Page</a> <br />
-          <a href="https://github.com/munozirianni1988/HTML-CSS-Module-Project"
-            >Landing Page for Karma</a
-          >
-        </p>
+        <ul>
+          <li>
+            <a href="https://iriannimunoz.netlify.app/"> Personal Page</a>
+          </li>
+          <li>
+            <a href="https://karmastore.netlify.app/">Landing Page for Karma</a>
+          </li>
+        </ul>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
