working at projects section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap"
       rel="stylesheet"
     />
+    <script src="/somecode.js" defer></script>
   </head>
   <body>
     <header>
@@ -51,25 +52,62 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          I am still impressed by how the 2-digits world can appear in so many colors, functions and views. And the engine that makes that world to create is human logic and patience while translating every tiny bit of a task to the computer language. The first language I was introduced to was Pascal at school when no one heard about C# or Phython yet &#x1F9D0 however the main principles of if statements are still the same. Unfortunately i was not able to continue my coding path that time, but in 20 years time this world is still magnificent to me and an every solved coding task for me is still as a huge victory which i enjoy every time &#x1F60A.
+          Hi! My name is Anna. I am a persistent introvert who enjoys building and watching things from the beginning.
         </p>
+        <p>
+          The first language I was introduced to was Pascal at school when no one heard about C# or Phython yet &#x1F9D0 however the main principles of if statements are still the same. Unfortunately i was not able to continue my coding path that time.
+        </p>
+        <p>
+          My life path had brought to a point where I learnt about network architecture and loved it so much that decided to become a specialist in cybersecurity. So i entered the university where I learnt about C# and Java but only basics.
+        </p>
+        <p>
+          Unfortunately the war started in my country did not let me to continue the education. I tried to attend online courses but theory without practice is very weak skill. 
+        </p>
+        <p>
+          Code Your Future helped me to come back into IT world. I've learnt basics of HTML, CSS and JavaScript but the most important they taught me how to learn further correctly and constantly develope my skills. I still but in 20 years time this world is still magnificent to me and an every solved coding task for me is still as a huge victory which i enjoy every time &#x1F60A.
+        </p>
+        <p>
+          The most significant reward for me is when people like using things that i did.
+         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Here are some of my projects. They may look simple to build but each of them holds a small combat and a victory inside. 
+          Victory of making something work in a way the developer wants.
         </p>
+        <div id="container">
+          <button id="previous" type="button"> << </button>
+          <div id="project1" class="project">
+            <h3>Personal Web-page</h3>
+            <img src="/images/My project.png" alt="tiger on the blue background">
+            <p>This page is really valuable for me as it was the first project I could share with my friends via link<br>
+              <a href="https://annafyz-about-me.netlify.app/" target="_blank">https://annafyz-about-me.netlify.app/</a>
+            </p>
+          </div>
+          <div id="project2" class="project">
+            <h3>Karma Module project</h3>
+            <img>
+            <p>
+              <a href="https://karma-project-annafyz.netlify.app/" target="_blank">https://karma-project-annafyz.netlify.app/</a>
+            </p>
+          </div>
+          <div id="project3" class="project">
+            <h3>Kaktus webshop</h3>
+            <img>
+            <p>This project became a real CSS challenge for me and taught a lot
+              <a href="https://annafyz-kaktus-shop.netlify.app/" target="_blank">https://annafyz-kaktus-shop.netlify.app/</a>
+            </p>
+          </div>
+          <button id="next" type="button"> >> </button>
+        </div>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          email: hrychaniuk@gmail.com
+          LinkedIn: https://github.com/AnnaFYZ/Portfolio
+          
         </p>
       </section>
     </main>
