next button created

--- a/index.html
+++ b/index.html
@@ -78,26 +78,11 @@
         </p>
         <div id="container">
           <button id="previous" type="button"> << </button>
-          <div id="project1" class="project">
-            <h3>Personal Web-page</h3>
-            <img src="/images/My project.png" alt="tiger on the blue background">
-            <p>This page is really valuable for me as it was the first project I could share with my friends via link<br>
-              <a href="https://annafyz-about-me.netlify.app/" target="_blank">https://annafyz-about-me.netlify.app/</a>
-            </p>
-          </div>
-          <div id="project2" class="project">
-            <h3>Karma Module project</h3>
-            <img>
-            <p>
-              <a href="https://karma-project-annafyz.netlify.app/" target="_blank">https://karma-project-annafyz.netlify.app/</a>
-            </p>
-          </div>
-          <div id="project3" class="project">
-            <h3>Kaktus webshop</h3>
-            <img>
-            <p>This project became a real CSS challenge for me and taught a lot
-              <a href="https://annafyz-kaktus-shop.netlify.app/" target="_blank">https://annafyz-kaktus-shop.netlify.app/</a>
-            </p>
+          <div id="project" class="project">
+            <h3 id="title"></h3>
+            <img id="projectImg">
+            <p id="description"></p>
+            <a id="projectlink"></a>
           </div>
           <button id="next" type="button"> >> </button>
         </div>
@@ -113,7 +98,7 @@
     </main>
     <footer>
       <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
+        <a href="https://github.com/AnnaFYZ/Portfolio"
           ><svg
             focusable="false"
             role="presentation"
