only readme missing

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          email: hrychaniuk@gmail.com
-          LinkedIn: https://github.com/AnnaFYZ/Portfolio
+          email: hrychaniuk@gmail.com<br>
+          LinkedIn: <a href="https://www.linkedin.com/in/anna-hrychaniuk-51b681238">https://www.linkedin.com/in/anna</a>
           
         </p>
       </section>
