--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
     <meta
       name="description"
-      content="The technical portfolio of trainee name"
+      content="The technical portfolio of AnnaFYZ"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- suppress FOUC-->
@@ -82,6 +82,7 @@
             <h3 id="title"></h3>
             <img id="projectImg">
             <p id="description"></p>
+            <a id="gitlink"><img src="/images/GitHub_Logo.png" width="80px"></a><br>
             <a id="projectlink"></a>
           </div>
           <button id="next" type="button"> >> </button>
