--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Junita Lama</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,28 +51,36 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+        I am a trainee software developer in Code your Future and have completed several projects using languages such as Html, CSS, and Java script. My course module also covers Node JS, React and Jest which I am going to learn and complete in a few months. I have gained a solid foundation in software design principles, data structures, algorithms, and object-oriented programming. I am also familiar with various development tools and technologies such as Git, Github, Netlify, Visual studio code etc.<br>
+        In addition to my technical skills, I have strong analytical, problem-solving, and communication skills that I believe are essential for a software developer. I am a quick learner and enjoy collaborating with others to create innovative solutions that meet business requirements.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          My projects:
+          </p>
+          <ul>
+            <li>
+              <a href = "https://cyf-junitalama-tv.netlify.app/">Tv show dom project</a>
+            </li>
+            <li>
+              <a href= "https://junita-cakeshop-cyf.netlify.app/">cake shop project</a>
+            </li>
+            <li>
+              <a href="https://animation-basiccss-junita.netlify.app/">animation css</a>
+            </li>
+            
+          </ul>
         </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          <a href = mailto:"lamajunitaa@gmail.com">gmail</a>
+          </p>
+          <p>
+          <a href = "https://www.linkedin.com/in/junita-lama-73b110252?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bz7c6PmqgSAShxipDFFOIgA%3D%3D">linkedin</a>
         </p>
       </section>
     </main>
