--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           </p>
           <ul>
             <li>
+              <a href = "https://github.com/Junitalama/HTML-CSS-Module-Project/blob/master/index.html">karma project</a>
+            </li>
+            <li>
               <a href = "https://cyf-junitalama-tv.netlify.app/">Tv show dom project</a>
             </li>
             <li>
