--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Saqib Javed</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,28 +51,41 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Hi, My name is Saqib Javed and I am a trainee software developer at <span>Code your Future</span> (London). I always wanted to be a programmer because i find it realy interesting and fun to code. At CodeYourFuture, I have completed several projects using <strong>Html, CSS, and JavaScript.</strong>
+          <br>
+          <br>
+          Theres is more to cover in my course module such as Node JS, React and Jest, which I am going to learn and complete in a few months. I have gained a solid foundation in software design principles, data structures, algorithms, and object-oriented programming. I am also familiar with various development tools and technologies such as <strong>Git, Github, Netlify and Visual studio code.</strong> 
+          <br>
+          <br>
+          In addition to my technical skills, I have strong problem-solving, and communication skills that I believe are essential for a software developer. I am a quick learner and enjoy collaborating with others to create innovative solutions that meet business requirements.
         </p>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Here are my few projects that i did with my <span>Code Your Future.</span> I will add more once my projects are completed.
+
+          My projects:
+          </p>
+
+          <ul>
+            <li><a href = "#">karma project</a></li>
+            <li><a href = "#">Tv show dom project</a></li>
+            <li><a href= "#">cake shop project</a></li>
+            <li><a href="#">to add more</a></li>
+          </ul>
         </p>
+
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+          Please contact me on:
+
+          <a href = mailto:"">Email</a>
+          </p>
+          <p>
+          <a href = "">linkedin Profile</a>
         </p>
       </section>
     </main>
