--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
               <a href = "https://cyf-junitalama-tv.netlify.app/">Tv show dom project</a>
             </li>
             <li>
+              <a href = "https://junita-weather-app.netlify.app//">Weather App</a>
+            </li>
+            <li>
               <a href= "https://junita-cakeshop-cyf.netlify.app/">cake shop project</a>
             </li>
             <li>
