--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a href = "https://cyf-junitalama-tv.netlify.app/">Tv show dom project</a>
             </li>
             <li>
-              <a href = "https://junita-weather-app.netlify.app//">Weather App</a>
+              <a href = "https://junita-weather-app.netlify.app/">Weather App</a>
             </li>
             <li>
               <a href= "https://junita-cakeshop-cyf.netlify.app/">cake shop project</a>
