--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
         <p>
-          In my project showcase, I highlight websites, functions I have coded on Code Your Future, but also from freecodecamp, General Assembly, Udemy and You channels.
+          In my project showcase, I highlight websites, functions I have coded on Code Your Future, but also from freecodecamp, General Assembly, Udemy and Youtube channels.
         </p>
 
         <h2>These are some of my projects</h2>
