--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <h2>These are some of my projects</h2>
         <div class="projects-grid">  
           <p href="https://github.com/softacoder/cyf-hotel-react">
-            <img src="https://pixabay.com/photos/architecture-building-infrastructure-2572715" alt="CYF hotel"
+            <img src="https://cdn.pixabay.com/photo/2017/08/02/18/14/architecture-2572715_1280.jpg" alt="CYF hotel"
               class="project-img" />
               <p class="project-tile"></p>CYF hotel</p></img>
             </a>
