--- a/index.html
+++ b/index.html
@@ -84,7 +84,19 @@
 
         <h2>These are some of my projects</h2>
         <div class="projects-grid">  
-          <p href="https://github.com/softacoder/cyf-hotel-react">
+          <p href="https://brilliant-flan-d06846.netlify.app/">
+            <img src="https://cdn.pixabay.com/photo/2017/08/02/18/14/architecture-2572715_1280.jpg" alt="Quotes server"
+              class="project-img" />
+              <p class="project-tile"></p>Quotes server</p></img>
+            </a>
+
+          <p href="https://strong-meerkat-359514.netlify.app">
+            <img src="https://cdn.pixabay.com/photo/2017/08/02/18/14/architecture-2572715_1280.jpg" alt="CYF hotel"
+              class="project-img" />
+              <p class="project-tile"></p>CYF hotel</p></img>
+            </a>
+
+          <p href="https://strong-meerkat-359514.netlify.app">
             <img src="https://cdn.pixabay.com/photo/2017/08/02/18/14/architecture-2572715_1280.jpg" alt="CYF hotel"
               class="project-img" />
               <p class="project-tile"></p>CYF hotel</p></img>
